# pitaya

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.codex  LICENSE  PLAN.md  README.md  models.yaml  pyproject.toml
.github/: pull_request_template.md  release_checklist.md
.github/workflows/: ci.yml  strategies-smoke.yml
docs/: SPECIFICATION.md  cli.md  configuration.md  custom-strategies.md  index.md  plugins.md  quickstart.md  strategies.md  tui.md
examples/: custom_simple.py  custom_strategy.py  fanout_two.py  propose_refine.py
src/: __main__.py  cli.py  config.py  exceptions.py
src/instance_runner/: __init__.py  agent_runner.py  api.py  attempt_executor.py  attempt_mixins.py  attempt_timeout.py  claude_parser.py  claude_parser_impl.py  codex_parser.py  codex_parser_handlers.py  container_manager.py  docker_async.py  docker_cleanup.py  docker_config.py  docker_context.py  docker_create.py  docker_execute.py  docker_heartbeat.py  docker_image_reuse.py  docker_manager.py  docker_mounts.py  docker_start.py  git_cleanup.py  git_cleanup_impl.py  git_import_impl.py  git_import_lock.py  git_import_logic.py  git_operations.py  git_run_cmd_impl.py  git_utils.py  git_workspace.py  git_workspace_impl.py  import_manager.py  plugin_interface.py  run_attempt.py  run_attempt_container.py  run_attempt_events.py  run_attempt_execute.py  run_attempt_finalize.py  run_attempt_results.py  (+9 more)
src/orchestration/: __init__.py  cli_parser.py  event_bus.py  event_persistence.py  http_client.py  http_server.py  instance_events.py  instance_manager.py  instance_runner.py  instance_spawn.py  orchestrator.py  results_utils.py  results_writer.py  resume_helpers.py  resume_manager.py  state.py  state_manager.py  state_models.py  state_rebuilder.py  state_snapshot.py  state_updates.py  strategy_context.py  strategy_handles.py  strategy_random.py  strategy_runner.py  strategy_task.py  strategy_utils.py
src/pitaya/: __init__.py  __main__.py  exceptions.py  version.py
src/pitaya/cli/: __init__.py  (+14 more)
src/shared/: __init__.py  config.py  results.py  type_aliases.py  types.py
src/tui/: __init__.py  __main__.py  adaptive.py  cli.py  display.py  event_handler.py  models.py
src/utils/: __init__.py  log_rotation.py  model_mapping.py  platform_utils.py  structured_logging.py
tests/: test_cli_helpers.py  test_codex_parser.py  test_codex_plugin.py  test_event_bus_redaction.py  test_failure_cleanup_volume.py  test_git_operations.py  test_runner_cancellation_event.py
tests/integration/: test_git_operations.py
tests/unit/: test_cli_helpers.py  test_codex_parser.py  test_codex_plugin.py  test_event_bus_redaction.py  test_failure_cleanup_volume.py  test_runner_cancellation_event.py
(+169 files in other folders)
