[project]
name = "orchestrator"
version = "0.1.0"
description = "Parallel execution of AI coding agents to explore multiple solution paths"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "docker>=7.1.0",
    "rich>=14.0.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.12.0",
    "aiofiles>=24.1.0",
    "watchdog>=6.0.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
orchestrator = "src.cli:main"
orchestrator-tui = "src.tui.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "mypy>=1.13.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "types-pyyaml>=6.0.12.20250516",
    "types-aiofiles>=24.1.0.20250708",
]
